<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_100"
        tools:context=".FormCadastro">

<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_100"
    tools:context=".FormCadastro"/>

    <TextView
        android:id="@+id/txtcadastrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/cadastro"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/cadastroComponents"
        style="@style/ContainerComponents"
        android:background="@drawable/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcadastrese" />

    <EditText
        android:id="@+id/editnomecad"
        style="@style/Edit_Text"
        android:hint="@string/nome"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey200"
        app:layout_constraintEnd_toEndOf="@id/cadastroComponents"
        app:layout_constraintStart_toStartOf="@id/cadastroComponents"
        app:layout_constraintTop_toTopOf="@id/cadastroComponents" />

    <EditText
        android:id="@+id/editemailcad"
        style="@style/Edit_Text"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey200"
        app:layout_constraintEnd_toEndOf="@id/cadastroComponents"
        app:layout_constraintStart_toStartOf="@id/cadastroComponents"
        app:layout_constraintTop_toBottomOf="@id/editnomecad" />

    <EditText
        android:id="@+id/editsenhacad"
        style="@style/Edit_Text"
        android:drawableEnd="@drawable/ic_lock"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey200"
        app:layout_constraintEnd_toEndOf="@id/cadastroComponents"
        app:layout_constraintStart_toStartOf="@id/cadastroComponents"
        app:layout_constraintTop_toBottomOf="@id/editemailcad" />

    <Button
        android:id="@+id/btncadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/blue_200"
        android:text="@string/cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cadastroComponents"
        app:layout_constraintStart_toStartOf="@+id/cadastroComponents"
        app:layout_constraintTop_toBottomOf="@+id/cadastroComponents" />

    <TextView
        android:id="@+id/txttelalogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/textLogin"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cadastroComponents"
        app:layout_constraintStart_toStartOf="@+id/cadastroComponents"
        app:layout_constraintTop_toBottomOf="@id/btncadastro" />


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>