<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_100"
    tools:context=".FormLogin">

    <ImageView
        android:id="@+id/imglogologin"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/DescLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logobrancafull" />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        android:background="@drawable/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogologin" />

    <EditText
        android:id="@+id/editemail"
        style="@style/Edit_Text"
        android:drawableRight="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey200"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents" />

    <EditText
        android:id="@+id/editsenha"
        style="@style/Edit_Text"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/ic_lock"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey200"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/editemail" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/blue_200"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@+id/editsenha" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents" />

    <TextView
        android:id="@+id/txttelacadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textCadastro"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/progressbar" />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

